* converted all use of term Cookie to localStorage, except some userTexts
* added option to print dialog to set maximum small sequence scaling (Issue #129)
* corrected glider rules for 8.6.1-8 column 3&4. Were incorrect because of mistake in assuming rolls in bottom
* corrected conv-roll in rules14.js to account for superslow glider roll

1.4.1.3
* fixed incorrect K for flick after roll in top of loop (e.g. o2,2if) (Issue #138)
* added roundTwo calculation for lines around top of loop roll
* updated openaero.php and index.html to use latest version from GIT

1.4.1.2
* increased size of plus/min value boxes (e.g. in "gaps")

1.4.1.1
* added zoom (ctrl +/- and menu entry) to Chrome app

1.4.1
* restore App window size to previous on subsequent startup (Issue #128)
* added French user interface
* improved compVersion function to allow versions with more than 3 numbers
* added double humpty bumps with different half loop sizes (Issue #127 and #133)
* added experimental turn perspective feature
* fixed bug where sequence text caret would jump to end when text editing double bump (Issue #135)
* cleaned up config.js
* fixed scaling bug which appeared in Chrome 32 (Issue #134)
* fixed Chrome 32 print popup issue
* fixed several Firefox issues for the Figure Queue
* fixed bug where spin only (without "iv") would not show up in queue correctly
* fixed bug where single-figure sequences do not show up on form C
* fixed popup blocking issues
* added file selection in multiple steps for "Check multiple seq"
* corrected max K in mini Form A for Floating Point where applicable

1.4.0
* added Belgian Aerobatic Club logo
* fixed missing flags in Firefox grid view print (Issue #107)
* added option to hide 'illegal' figures (and whole groups) in Chooser (Issue #102)
* added option for comment rotation by 90 degrees
* added roll comments. To prevent mistakes, original roll text (e.g. 3x4) can not be replaced (Issue #34)