@@ -1,5 +1,5 @@
 CACHE MANIFEST
-# OpenAero version 1.4.2.3
+# OpenAero version 1.4.2
 about.html
 arestisystem.html
 buttons/figEndInv.png
