@@ -225,6 +225,10 @@
             <input type="checkbox" id="blackWhite">
             <span class="userText" id="t_blackWhite"></span>
           </div>
+          <div>
+            <span class="userText" id="t_maxScaling"></span>
+            <span><input type="number" step="10" min="100" value="300" id="maxScaling">%</span>
+          </div>
           <div class="section">
             <div class="userText" id="t_saveImageVariables"></div>
             <span>
