@@ -14,6 +14,7 @@
 * added option to print dialog to set maximum small sequence scaling (Issue #129)
 * corrected glider rules for 8.6.1-8 column 3&4. Were incorrect because of mistake in assuming rolls in bottom
 * corrected conv-roll in rules14.js to account for superslow glider roll
+* added userTexts for browser detection
 
 1.4.1.3
 * fixed incorrect K for flick after roll in top of loop (e.g. o2,2if) (Issue #138)
